[package]
name = "dolarhoy-core"
version = "0.3.0"
edition = "2021"
description = "A crate for fetching currency values from dolarhoy.com"
keywords = ["dolarhoy", "client"]
license = "MIT"
repository = "https://github.com/emaphp/dolarhoy-core/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
nom = "7.1"
unhtml = { version = "0.8", features = ["derive"]}
